Tango/DLL Files/TANGO DLL for Visual Studio VC++6.0 (32 Bit)/TangoLSX_API.h


struct TLS_ControlInitPar
{
  int Size;
  int InterfaceType;
  char ComNameLength;
  char ComName[32];
  BOOL ShowProt;
  BOOL ShowCmdList;

  int BaudRate;
  int IOAdress;
  int CardIndex;

  int ControlType;
  char VersionStrLength;
  char VersionStr[64];
  int Axes;
  int ErrorCode;
  BOOL NewCmds;
  int Encoder;
  BOOL Display, SpeedPoti, HandWheel, Snapshot, TVR, TriggerOut;
  BOOL DemoMode;
};

TANGOAPI int TANGOCALL LSX_Connect (int lLSID);

TANGOAPI int TANGOCALL LSX_ConnectSimple (int lLSID, int lAnInterfaceType, char *pcAComName, int lABaudRate, int lAShowProt);

TANGOAPI int TANGOCALL LSX_ConnectEx (int lLSID, TLS_ControlInitPar *pAControlInitPar);

TANGOAPI int TANGOCALL LSX_Disconnect (int lLSID);

TANGOAPI int TANGOCALL LSX_LoadConfig (int lLSID, char *pcFileName);

TANGOAPI int TANGOCALL LSX_SaveConfig (int lLSID, char *pcFileName);

TANGOAPI int TANGOCALL LSX_MoveAbs (int lLSID, double dX, double dY, double dZ, double dA, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveRel (int lLSID, double dX, double dY, double dZ, double dA, BOOL bWait);


TANGOAPI int TANGOCALL LSX_Calibrate (int lLSID);

TANGOAPI int TANGOCALL LSX_RMeasure (int lLSID);

TANGOAPI int TANGOCALL LSX_SetPitch (int lLSID, double dX, double dY, double dZ, double dA);


TANGOAPI int TANGOCALL LSX_SetPos (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetActiveAxes (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetVel (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetAccel (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetReduction (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetDelay (int lLSID, int lDelay);

TANGOAPI int TANGOCALL LSX_SetSwitchPolarity (int lLSID, int lXP, int lYP, int lZP, int lAP);

TANGOAPI int TANGOCALL LSX_SetSwitchActive (int lLSID, int lXA, int lYA, int lZA, int lAA);

TANGOAPI int TANGOCALL LSX_SetJoystickOn (int lLSID, BOOL bPositionCount, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_SetJoystickOff (int lLSID);

TANGOAPI int TANGOCALL LSX_SoftwareReset (int lLSID);

TANGOAPI int TANGOCALL LSX_SetDigitalOutput (int lLSID, int lIndex, BOOL bValue);

TANGOAPI int TANGOCALL LSX_GetDigitalInputs (int lLSID, int *plValue);

TANGOAPI int TANGOCALL LSX_SetAnalogOutput (int lLSID, int lIndex, int lValue);

TANGOAPI int TANGOCALL LSX_GetAnalogInput (int lLSID, int lIndex, int *plValue);

TANGOAPI int TANGOCALL LSX_SetLimit (int lLSID, int lAxis, double dMinRange, double dMaxRange);

TANGOAPI int TANGOCALL LSX_SetLimitControl (int lLSID, int lAxis, BOOL bActive);

TANGOAPI int TANGOCALL LSX_GetPos (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_GetStatus (int lLSID, char *pcStat, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetEncoderMask (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_StopAxes (int lLSID);

TANGOAPI int TANGOCALL LSX_SetAbortFlag (int lLSID);

TANGOAPI int TANGOCALL LSX_MoveRelSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_MoveAbsSingleAxis (int lLSID, int lAxis, double dValue, BOOL bWait);

TANGOAPI int TANGOCALL LSX_SetControlPars (int lLSID);

TANGOAPI int TANGOCALL LSX_SetMotorCurrent (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetVelSingleAxis (int lLSID, int lAxis, double dVel);

TANGOAPI int TANGOCALL LSX_SetAccelSingleAxis (int lLSID, int lAxis, double dAccel);

TANGOAPI int TANGOCALL LSX_CalibrateEx (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_RMeasureEx (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_SetShowProt (int lLSID, int lShowProt);

TANGOAPI int TANGOCALL LSX_GetAnalogInputs2 (int lLSID, int *plPT100, int *plMV, int *plV24);

TANGOAPI int TANGOCALL LSX_SendString (int lLSID, char *pcStr, char *pcRet, int lMaxLen, BOOL bReadLine, int lTimeOut);

TANGOAPI int TANGOCALL LSX_SetSpeedPoti (int lLSID, BOOL bSpeedPoti);

TANGOAPI int TANGOCALL LSX_SetTVRMode (int lLSID, int lXT, int lYT, int lZT, int lAT);

TANGOAPI int TANGOCALL LSX_SetAutoStatus (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_GetStatusAxis (int lLSID, char *pcStatusAxisStr, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetDigIO_Off (int lLSID, int lIndex);

TANGOAPI int TANGOCALL LSX_SetDigIO_Polarity (int lLSID, int lIndex, BOOL bHigh);

TANGOAPI int TANGOCALL LSX_SetDigIO_EmergencyStop (int lLSID, int lIndex);

TANGOAPI int TANGOCALL LSX_SetDigIO_Distance (int lLSID, int lIndex, BOOL bFkt, double dDist, int lAxis);

TANGOAPI int TANGOCALL LSX_SetDimensions (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_MoveRelShort (int lLSID);

TANGOAPI int TANGOCALL LSX_SetEncoderPeriod (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetJoystickDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetEncoderMask (int lLSID, int lValue);

TANGOAPI int TANGOCALL LSX_SetGear (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetHandWheelOn (int lLSID, BOOL bPositionCount, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_SetHandWheelOff (int lLSID);

TANGOAPI int TANGOCALL LSX_SetFactorTVR (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetController (int lLSID, int lXC, int lYC, int lZC, int lAC);

TANGOAPI int TANGOCALL LSX_SetControllerCall (int lLSID, int lCtrCall);

TANGOAPI int TANGOCALL LSX_SetControllerSteps (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetControllerFactor (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetControllerTWDelay (int lLSID, int lCtrTWDelay);

TANGOAPI int TANGOCALL LSX_SetEncoderRefSignal (int lLSID, int lXR, int lYR, int lZR, int lAR);

TANGOAPI int TANGOCALL LSX_SetEncoderPosition (int lLSID, BOOL bValue);

TANGOAPI int TANGOCALL LSX_GetVersionStr (int lLSID, char *pcVers, int lMaxLen);

TANGOAPI int TANGOCALL LSX_GetError (int lLSID, int *plErrorCode);

TANGOAPI int TANGOCALL LSX_GetPosSingleAxis (int lLSID, int lAxis, double *pdPos);

TANGOAPI int TANGOCALL LSX_SetDistance (int lLSID, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_GetPosEx (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdR, BOOL bEncoder);

TANGOAPI int TANGOCALL LSX_SetShowCmdList (int lLSID, BOOL bShowCmdList);

TANGOAPI int TANGOCALL LSX_SetWriteLogText (int lLSID, BOOL bAWriteLogText);

TANGOAPI int TANGOCALL LSX_SetControllerTimeout (int lLSID, int lACtrTimeout);

TANGOAPI int TANGOCALL LSX_SetEncoderActive (int lLSID, int lFlags);

TANGOAPI int TANGOCALL LSX_GetSnapshotCount (int lLSID, int *plSnsCount);

TANGOAPI int TANGOCALL LSX_GetSnapshotPos (int lLSID, double *pdX, double *pdY, double *pdZ, double *pdA);

TANGOAPI int TANGOCALL LSX_SetCorrTblOff (int lLSID);

TANGOAPI int TANGOCALL LSX_SetCorrTblOn (int lLSID, char *pcAFileName);

TANGOAPI int TANGOCALL LSX_SetFactorMode (int lLSID, BOOL bAFactorMode, double dX, double dY, double dZ, double dA);

TANGOAPI int TANGOCALL LSX_SetSnapshot (int lLSID, BOOL bASnapshot);

TANGOAPI int TANGOCALL LSX_SetSnapshotPar (int lLSID, BOOL bHigh, BOOL bAutoMode);

TANGOAPI int TANGOCALL LSX_SetTrigger (int lLSID, BOOL bATrigger);

TANGOAPI int TANGOCALL LSX_SetTriggerPar (int lLSID, int lAxis, int lMode, int lSignal, double dDistance);


TANGOAPI int TANGOCALL LSX_SetLanguage (int lLSID, char *pcPLN);

TANGOAPI int TANGOCALL LSX_GetSwitches (int lLSID, int *plFlags);

TANGOAPI int TANGOCALL LSX_GetSerialNr (int lLSID, char *pcSerialNr, int lMaxLen);

TANGOAPI int TANGOCALL LSX_SetCalibOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_SetRMOffset (int lLSID, double dX, double dY, double dZ, double dR);

TANGOAPI int TANGOCALL LSX_GetSnapshotPosArray (int lLSID, int lIndex, double *pdX, double *pdY, double *pdZ, double *pdR);

TANGOAPI int TANGOCALL LSX_SetAxisDirection (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_SetCalibrateDir (int lLSID, int lXD, int lYD, int lZD, int lAD);

TANGOAPI int TANGOCALL LSX_LStepSave (int lLSID);