Tango/DLL Examples/Delphi_XE8/Tango_DLL.pas

unit Tango_DLL;

interface

const
  TangoDLL = 'Tango_dll.dll';
  XAxis = 1;
  YAxis = 2;
  ZAxis = 3;
  AAxis = 4;

type
  TLS_ControlInitPar = packed record
    Size: Integer;
    InterfaceType: Integer;
    ComName: string[32];
    ShowProt: LongBool;
    ShowCmdList: LongBool;

    BaudRate: Integer;
    IOAddress: LongWord;
    CardIndex: Integer;

    ControlType: Integer;
    VersionStr: string[64];
    Axes: Integer;
    ErrorCode: Integer;
    NewCmds: LongBool;
    Encoder: Integer;
    Display, SpeedPoti, HandWheel, Snapshot, TVR, TriggerOut: LongBool;

    DemoMode: LongBool;

  end;

function LSX_Connect(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_ConnectSimple(LSID: Integer; AnInterfaceType: Integer; AComName: PAnsiChar; ABaudRate: Integer; AShowProt: LongBool): Integer; stdcall; external TangoDLL;
function LSX_ConnectEx(LSID: Integer; var AControlInitPar: TLS_ControlInitPar): Integer; stdcall; external TangoDLL;
function LSX_Disconnect(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_LoadConfig(LSID: Integer; FileName: PAnsiChar): Integer; stdcall; external TangoDLL;
function LSX_SaveConfig(LSID: Integer; FileName: PAnsiChar): Integer; stdcall; external TangoDLL;

function LSX_MoveAbs(LSID: Integer; X, Y, Z, A: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_MoveRel(LSID: Integer; X, Y, Z, A: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_Calibrate(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_RMeasure(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetPitch(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetPos(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetActiveAxes(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetVel(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetAccel(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetReduction(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetDelay(LSID: Integer; Delay: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetSwitchPolarity(LSID: Integer; XP, YP, ZP, AP: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetSwitchActive(LSID: Integer; XA, YA, ZA, AA: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetJoystickOn(LSID: Integer; PositionCount, Encoder: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetJoystickOff(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SoftwareReset(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigitalOutput(LSID: Integer; Index: Integer; Value: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetDigitalInputs(LSID: Integer; var Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetAnalogOutput(LSID: Integer; Index: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetAnalogInput(LSID: Integer; Index: Integer; var Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetLimit(LSID: Integer; Axis: Integer; MinRange, MaxRange: Double): Integer; stdcall; external TangoDLL;
function LSX_SetLimitControl(LSID: Integer; Axis: Integer; Active: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetPos(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetStatus(LSID: Integer; Stat: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetEncoderMask(LSID: Integer; var Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_StopAxes(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetAbortFlag(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_MoveRelSingleAxis(LSID: Integer; Axis: Integer; Value: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_MoveAbsSingleAxis(LSID: Integer; Axis: Integer; Value: Double; Wait: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetControlPars(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetMotorCurrent(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetVelSingleAxis(LSID: Integer; Axis: Integer; Vel: Double): Integer; stdcall; external TangoDLL;
function LSX_SetAccelSingleAxis(LSID: Integer; Axis: Integer; Accel: Double): Integer; stdcall; external TangoDLL;
function LSX_CalibrateEx(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_RMeasureEx(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetShowProt(LSID: Integer; ShowProt: LongBool): Integer; stdcall; external TangoDLL;
function LSX_GetAnalogInputs2(LSID: Integer; var PT100, MV, V24: Integer): Integer; stdcall; external TangoDLL;
function LSX_SendString(LSID: Integer; Str, Ret: PAnsiChar; MaxLen: Integer; ReadLine: LongBool; TimeOut: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetSpeedPoti(LSID: Integer; SpeedPoti: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetTVRMode(LSID: Integer; XT, YT, ZT, AT: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetAutoStatus(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetStatusAxis(LSID: Integer; StatusAxisStr: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigIO_Off(LSID: Integer; Index: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigIO_Polarity(LSID: Integer; Index: Integer; High: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetDigIO_EmergencyStop(LSID: Integer; Index: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDigIO_Distance(LSID: Integer; Index: Integer; Fkt: LongBool; Dist: Double; Axis: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetDimensions(LSID: Integer; XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;
function LSX_MoveRelShort(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetEncoderPeriod(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;

function LSX_SetJoystickDir(LSID: Integer; XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetEncoderMask(LSID: Integer; Value: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetGear(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetHandWheelOn(LSID: Integer; PositionCount, Encoder: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetHandWheelOff(LSID: Integer): Integer; stdcall; external TangoDLL;

function LSX_SetFactorTVR(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL; 
function LSX_SetController(LSID: Integer; XC, YC, ZC, AC: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetControllerCall(LSID: Integer; CtrCall: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetControllerSteps(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetControllerFactor(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetControllerTWDelay(LSID: Integer; CtrTWDelay: Integer): Integer; stdcall; external TangoDLL;

function LSX_SetEncoderRefSignal(LSID: Integer; XR, YR, ZR, AR: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetEncoderPosition(LSID: Integer; Value: LongBool): Integer; stdcall; external TangoDLL;

function LSX_GetVersionStr(LSID: Integer; Vers: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetError(LSID: Integer; var ErrorCode: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetPosSingleAxis(LSID: Integer; Axis: Integer; var Pos: Double): Integer; stdcall; external TangoDLL;
function LSX_SetDistance(LSID: Integer; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_GetPosEx(LSID: Integer; var X, Y, Z, R: Double; Encoder: LongBool): Integer; stdcall; external TangoDLL;

function LSX_SetShowCmdList(LSID: Integer; ShowCmdList: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetWriteLogText(LSID: Integer; AWriteLogText: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetControllerTimeout(LSID: Integer; ACtrTimeout: Integer): Integer; stdcall; external TangoDLL;

function LSX_SetEncoderActive(LSID: Integer; Flags: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshotCount(LSID: Integer; var SnsCount: Integer): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshotPos(LSID: Integer; var X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetCorrTblOff(LSID: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCorrTblOn(LSID: Integer; AFileName: PAnsiChar): Integer; stdcall; external TangoDLL;
function LSX_SetFactorMode(LSID: Integer; AFactorMode: LongBool; X, Y, Z, A: Double): Integer; stdcall; external TangoDLL;
function LSX_SetSnapshot(LSID: Integer; ASnapshot: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetSnapshotPar(LSID: Integer; High, AutoMode: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetTrigger(LSID: Integer; ATrigger: LongBool): Integer; stdcall; external TangoDLL;
function LSX_SetTriggerPar(LSID: Integer; Axis, Mode, Signal: Integer; Distance: Double): Integer; stdcall; external TangoDLL;

function LSX_SetLanguage(LSID: Integer; PLN: PAnsiChar): Integer; stdcall; external TangoDLL;
function LSX_GetSwitches(LSID: Integer; var Flags: Integer): Integer; stdcall; external TangoDLL;

function LSX_GetSerialNr(LSID: Integer; SerialNr: PAnsiChar; MaxLen: Integer): Integer; stdcall; external TangoDLL;
function LSX_SetCalibOffset(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetRMOffset(LSID: Integer; X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_GetSnapshotPosArray(LSID: Integer; Index: Integer; var X, Y, Z, R: Double): Integer; stdcall; external TangoDLL;
function LSX_SetAxisDirection(LSID: Integer; XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;

function LSX_SetCalibrateDir(LSID: Integer; XD, YD, ZD, AD: Integer): Integer; stdcall; external TangoDLL;
function LSX_LStepSave(LSID: Integer): Integer; stdcall; external TangoDLL;
